packages/filter-builder-react/examples/dev/src/errors/JsonParseError.ts
export class JsonParseError extends Error {
  constructor(message: string) {
    super(message);
    this.name = 'JsonParseError';
  }
}
